# simplified_eye_hand_calibration

./: CMakeLists.txt  README.md  package.xml
camera_calib/camera_calib_monocular/: readme.md
camera_calib/camera_calib_stereo/: readme.md
config/: eyeInHandCalib.yaml
data/: output.txt  output_24.4.txt  output_24.5.txt  pose.txt
include/: solver.h
launch/: astrapro.launch  eye_in_hand_calib.launch  getColorImgAndOdomFromRos.launch  mytest.launch  rs_camera.launch
src/: captureRSCameraStream.cpp  captureRSCameraStream.hpp  eye_in_hand_calibration.cpp  eye_to_hand_calibration.cpp  getColorImgAndOdomFromRos.cpp  getColorImgAndOdomFromRos.hpp  main_RSCamera.cpp  main_getColorImgAndOdomFromRos.cpp  main_getRSColorImgAndOdom.cpp  solver.cpp
